# coq-in-coq

./: .gitignore  Makefile  README.md  _CoqProject  check-assumptions.sh  coq-in-coq.opam  dune  dune-project  extracting-blame.opam
examples/: avl.v  equality.v  fin.v  functor.v  hlist.v  inductive.v  lists.v  matrix.v  newman.v  ordered.v  printf.v  scoped.v  session.v  sigma.v  stlc.v  tagless.v  units.v  universe.v  vectors.v
paper/: .gitignore  Makefile  README.md  main.tex  references.bib  slides.tex
paper/stock-extraction/: .gitignore  README.md  driver.ml  driver_printf.ml  ex_avl.v  ex_equality.v  ex_fin.v  ex_functor.v  ex_hlist.v  ex_inductive.v  ex_lists.v  ex_matrix.v  ex_newman.v  ex_ordered.v  ex_printf.v  ex_scoped.v  ex_session.v  ex_sigma.v  ex_stlc.v  ex_tagless.v  ex_units.v  ex_universe.v  ex_vectors.v  run.sh
tests/: Extract.v  Makefile  avl.v  bad-semantic.v  bad-syntax.v  dune  equality.v  fin.v  functor.v  lexer.mll  matrix.v  naming.v  newman.v  parser.mly  printf.v  session.v  sigma.v  stlc.v  top.ml  units.v  universe.v  vectors.v
tests/expected/: avl.out  bad-semantic.out  bad-syntax.err  equality.out  fin.out  functor.out  hlist.out  inductive.out  lists.out  matrix.out  naming.out  newman.out  ordered.out  printf.out  scoped.out  session.out  sigma.out  stlc.out  tagless.out  units.out  universe.out  vectors.out
theories/: classification.v  consistency.v  dune  equivalence.v  implicit_variables.v  inference.v  interpretation_stability.v  interpretation_term.v  machine.v  ml_types.v  strong_normalization.v
theories/BlameFOmega/: README.md  blame.v  dune  expressions.v  infrastructure.v  nonnormalization.v  preservation.v  progress.v  safety.v  semantics.v  simulation.v  subtyping.v  subtyping_safety.v  syntax.v  ty_confluence.v  typing.v  typing_metatheory.v
theories/CoC/: candidates.v  classification.v  confluence.v  consistency.v  decidable_conversion.v  dune  equivalence.v  eta_reduction.v  eta_typing.v  expressions.v  inference.v  interpretation_stability.v  interpretation_term.v  interpretation_type.v  list_utils.v  machine.v  ml_types.v  names.v  strong_normalization.v  terms.v  typing.v
theories/Extraction/: Assumptions.v  common.v  context_facts.v  derivation_independence.v  dune  extraction.v  instantiation.v  jack.v  optimism.v  proofs.v  reduction_simulation.v  simulation_facts.v  source_facts.v  substitution_simulation.v  translation.v  type_extraction_facts.v  typing_proof.v  well_typed.v
